mobile- publication font title size, collaboration image size, tentang kami font title size, timkami column ratio, sejarah font overflow fix

--- a/views/css/custom.css
+++ b/views/css/custom.css
@@ -302,6 +302,11 @@ section#timkami .socials ul {
 	padding-left:18px;
 }
 
+#timkami .col-lg-4 .card {
+  margin-left:auto;
+  margin-right:auto;
+}
+
 .tk-textarea {
 	margin-bottom:30px !important;
 }
@@ -646,7 +651,7 @@ section#timkami .socials ul {
 }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
 /* Place the timelime to the left */
   #sejarah .timeline::after {
     left: 31px;
@@ -679,4 +684,62 @@ section#timkami .socials ul {
   #sejarah .right {
     left: 0%;
   }
+
+  #sejarah .timeline .content h2 > b {
+    font-size:25px;
+  }
+  #sejarah .timeline .content h3 {
+    font-size:20px;
+    font-weight: 600;
+  }
+
+  .publication-item .pub-panel .col-12 h3 a{
+    font-size:18px;
+  }
+
+  section#collabp .container .collab-item img{
+    width:148px !important;
+  }
+
+  #our-partners .col-sm-3 p{
+    display:none;    
+  }
+
+  #our-partners #partners-others p{
+    display:block !important;
+  }
+
+  /*Our partners logo*/
+
+  #our-partners .row:nth-child(1) .col-sm-3:nth-child(1) img {
+    width:126px;
+  }
+
+  #our-partners .row:nth-child(1) .col-sm-3:nth-child(3) img {
+    margin-top: -25px;
+  }
+
+  #our-partners .row:nth-child(2) .col-sm-3:nth-child(1) {
+    padding-top:0 !important;
+    padding-bottom:0 !important;
+  }
+
+  #our-partners .row:nth-child(2) .col-sm-3:nth-child(1) img {
+    width: 150px;
+    height: 33px;
+  }
+
+  #our-partners .row:nth-child(2) .col-sm-3:nth-child(2) {
+    padding-top:0 !important;
+    padding-bottom:0 !important;
+  }
+
+  #our-partners .row:nth-child(2) .col-sm-3:nth-child(2) img {
+    width: 150px;
+    height: 42px;
+  }
+
+  /*Our partners end*/
+
 }
+
